force-app/main/default/objects/Intacct_Log__c/Intacct_Log__c.object-meta.xml
<CustomObject>
    <label>Intacct Log</label>
    <nameField>
        <label>Intacct Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Intacct Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>