force-app/main/default/objects/Intacct_Log__c/fields/ACC_ID__c.field-meta.xml
<CustomField>
    <fullName>ACC_ID__c</fullName>
    <formula>CASESAFEID( BoomOrderAdditonalChargeCredit__r.Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACC ID</label>
    <type>Text</type>
</CustomField>