force-app/main/default/objects/Intacct_Log__c/fields/ACC_Sync__c.field-meta.xml
<CustomField>
    <fullName>ACC_Sync__c</fullName>
    <formula>Order_Additional_Charge_Credit__r.Intacct_Sync_Complete__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACC Sync</label>
    <type>Checkbox</type>
</CustomField>