force-app/main/default/objects/Intacct_Log__c/fields/BoomOrder__c.field-meta.xml
<CustomField>
    <fullName>BoomOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Boom Order</label>
    <referenceTo>SalesOrder__c</referenceTo>
    <relationshipLabel>Intacct Logs</relationshipLabel>
    <relationshipName>Intacct_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>