force-app/main/default/objects/Intacct_Log__c/fields/BoomOrderAdditonalChargeCredit__c.field-meta.xml
<CustomField>
    <fullName>BoomOrderAdditonalChargeCredit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Additional Charge and Credit</label>
    <referenceTo>SalesOrderAdditionalChargeCredit__c</referenceTo>
    <relationshipLabel>Intacct Logs</relationshipLabel>
    <relationshipName>Intacct_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>