force-app/main/default/objects/Intacct_Log__c/fields/BoomOrderProductLine__c.field-meta.xml
<CustomField>
    <fullName>BoomOrderProductLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order Product Line</label>
    <referenceTo>SalesOrderProductLine__c</referenceTo>
    <relationshipLabel>Intacct Logs</relationshipLabel>
    <relationshipName>Intacct_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>