force-app/main/default/objects/Intacct_Log__c/fields/Line_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Line_Effective_Date__c</fullName>
    <label>Line Effective Date</label>
    <type>Date</type>
</CustomField>