force-app/main/default/objects/Intacct_Log__c/fields/Order_Additional_Charge_Credit__c.field-meta.xml
<CustomField>
    <fullName>Order_Additional_Charge_Credit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Additional Charge/Credit</label>
    <referenceTo>kugo2p__SalesOrderAdditionalChargeCredit__c</referenceTo>
    <relationshipLabel>Intacct Logs</relationshipLabel>
    <relationshipName>Intacct_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>