force-app/main/default/objects/Intacct_Log__c/fields/Order_Name__c.field-meta.xml
<CustomField>
    <fullName>Order_Name__c</fullName>
    <label>Order Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>