force-app/main/default/objects/Intacct_Log__c/fields/Order_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Order_Product_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Product Line</label>
    <referenceTo>kugo2p__SalesOrderProductLine__c</referenceTo>
    <relationshipLabel>Intacct Logs</relationshipLabel>
    <relationshipName>Intacct_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>