force-app/main/default/objects/Intacct_Log__c/fields/Order_Product_Line_ID__c.field-meta.xml
<CustomField>
    <fullName>Order_Product_Line_ID__c</fullName>
    <formula>CASESAFEID(Order_Product_Line__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Product Line ID</label>
    <type>Text</type>
</CustomField>