force-app/main/default/objects/Intacct_Log__c/fields/Order_Product_Line_Sync__c.field-meta.xml
<CustomField>
    <fullName>Order_Product_Line_Sync__c</fullName>
    <formula>Order_Product_Line__r.Intacct_Sync_Complete__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Product Line Sync</label>
    <type>Checkbox</type>
</CustomField>