force-app/main/default/objects/Intacct_Log__c/fields/Synchronized_At__c.field-meta.xml
<CustomField>
    <fullName>Synchronized_At__c</fullName>
    <label>Synchronized At</label>
    <type>DateTime</type>
</CustomField>