force-app/main/default/objects/Intacct_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Order__c</columns>
    <columns>Line_Effective_Date__c</columns>
    <columns>Error__c</columns>
    <columns>Error_Log__c</columns>
    <columns>Synchronized_At__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Line_Effective_Date__c</field>
        <operation>greaterThan</operation>
        <value>9/13/2021</value>
    </filters>
    <filters>
        <field>Error__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All</label>
</ListView>